--- a/packages/VanillaUiRouter/package.json
+++ b/packages/VanillaUiRouter/package.json
@@ -7,5 +7,13 @@
   "license": "MIT",
   "scripts": {
     "publish": "npm publish --access public"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devosm1030/minute-spa.git"
+  },
+  "bugs": {
+    "url": "https://github.com/devosm1030/minute-spa/issues"
+  },
+  "homepage": "https://github.com/devosm1030/minute-spa#readme"
 }
